--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="reports/cucumber-html-reports/fileList.js"></script>
     <script>
         // get the latest file
-        var latestFile = fileList[fileList.length - 1]
+        var latestFile = fileList[0]
         // load the latest file
         window.location.href = "reports/cucumber-html-reports/" + latestFile
 
